Correcting overlap issues on Register page

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,7 @@ footer {
 .box {
     width: 400px;
     padding: 40px;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -63,8 +63,10 @@ footer {
     border-radius: 24px;
     transition: 0.25s;
 }
-
 .box input[type= "text"]:focus, .box input[type= "password"]:focus {
     width: 280px;
     border-color: #2ecc71;
+}
+.box-register {
+    padding: 0px
 }
